--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "start:prod": "webpack-dev-server --config internals/webpack/webpack.prod.js",
     "build": "webpack --config internals/webpack/webpack.prod.js",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --transformIgnorePatterns 'node_modules/(?!(<package-need-to-transform>|<other-package-need-to-transform>)/)'"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "classnames": "^2.2.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -44,6 +47,7 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "html-webpack-plugin": "^4.0.3",
     "husky": ">=4",
+    "jest": "^26.1.0",
     "lint-staged": ">=10",
     "node-sass": "^4.13.1",
     "prettier": "2.0.4",
@@ -72,5 +76,11 @@
     ],
     "*.css": "stylelint --fix",
     "*.scss": "stylelint --syntax=scss --fix"
+  },
+  "jest": { 
+    "moduleNameMapper": { 
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetTransformer.js", 
+      "\\.(css|less|scss)$": "<rootDir>/assetTransformer.js" 
+    } 
   }
 }
